# inaturalist-bot

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.md
.run/: inaturalist_bot.run.xml
config/: config.ini  config.py
src/: inaturalist_bot.py
src/config/: config.py
src/file_downloader/: __init__.py
src/inaturalist_interface/: __init__.py
