[tool.poetry]
name = "inaturailst-bot"
version = "0.1.0"
description = ""
authors = ["MatheusFBBueno <matfelipe2012@gmail.com>"]
readme = "README.md"
packages = [{include = "inaturailst_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
pyinaturalist = "^0.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
