[tool.poetry]
name = "inaturalist-bot"
version = "0.1.0"
description = ""
authors = ["MatheusFBBueno <matfelipe2012@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pyinaturalist = "^0.18.0"

[tool.poetry.scripts]
main = "src.inaturalist_bot:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
